--- a/config/database.yml
+++ b/config/database.yml
@@ -83,3 +83,5 @@ production:
   database: group_think_production
   username: group_think
   password: <%= ENV['GROUP_THINK_DATABASE_PASSWORD'] %>
+  url:  <%= ENV["DATABASE_URL"] %>
+  pool: <%= ENV["DB_POOL"] || ENV['MAX_THREADS'] || 30 %>
